--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,4 +19,4 @@ jobs:
     - run: |
         git checkout -b action
         git add bin/${{ env.config }}
-        git push --set-upstream origin action
+        git push --set-upstream origin action --force
