--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
 runs:
   using: "composite"
   steps: 
-    - run: dotnet run bin/${{ env.config }}/netcoreapp3.1/dotnet-hello-world-action.dll ${{ inputs.who }}
+    - run: dotnet exec bin/${{ env.config }}/netcoreapp3.1/dotnet-hello-world-action.dll ${{ inputs.who }}
       shell: bash
       env:
         DOTNET_NOLOGO: true
