git commit -m "Add built files"

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,7 @@ jobs:
     - run: |
         git checkout -b ${{ env.branch }}
         git add bin/${{ env.config }}
+        git commit -m "Add built files"
         git push --set-upstream origin ${{ env.branch }} --force
 
   test:
