config --global user

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,8 @@ jobs:
     - run: |
         git checkout -b ${{ env.branch }}
         git add bin/${{ env.config }}
+        git config --global user.email "you@example.com"
+        git config --global user.name "Package Publisher"        
         git commit -m "Add built files"
         git push --set-upstream origin ${{ env.branch }} --force
 
