--- a/.github/workflows/publish-and-test.yml
+++ b/.github/workflows/publish-and-test.yml
@@ -30,6 +30,7 @@ jobs:
         git config --global user.name "Package Publisher"        
         git commit -m "Add built files"
         git fetch
+        git branch -a
         git replace --graft HEAD origin/HEAD origin/${{ env.branch }}
         git push --set-upstream origin ${{ env.branch }} --force
         git tag $TAG_NAME
