--- a/.github/workflows/publish-and-test.yml
+++ b/.github/workflows/publish-and-test.yml
@@ -25,7 +25,7 @@ jobs:
 
     - run: |
         git checkout -b ${{ env.branch }}
-        git add bin/${{ env.config }}
+        git add bin/${{ env.config }}/netcoreapp3.1/publish
         git config --global user.email "you@example.com"
         git config --global user.name "Package Publisher"
         git commit -m "Add built files"
